syntax = "proto3";

package go.micro.srv.user;

service UserService {
	rpc CreateUser(User) returns (Response) {}
        rpc GetUsers(UsersRequest) returns (stream User) {}
}

message User {
	 string first_name = 1;
	 string last_name = 2;
	 string username = 3;
	 string password = 4;
         string UID = 5;
}

message UsersRequest {
        bool all = 1;
        int64 count = 2;
}

message Response {
	bool create = 1;
        User user = 2;
}
